--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
+main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    position: relative;
+}
+
+.body{
+    padding: 10px;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.346);
+    max-width: 400px;
+    /* position: relative; */
+}
+
+.btns{
+    text-align: center;
+}
+
 .modal {
     display: none;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     left: 0;
     top: 0;
@@ -8,6 +28,10 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+#submitButton, #prevButton{
+    display: none;
 }
 
 .modal-content {
