adjusted modal position

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
     width: 500px;
+    position: relative;
   }
   
   h1 {
@@ -58,7 +59,7 @@ body {
   
   .modal {
     display: none;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     left: 0;
     top: 0;
